improves rendering functionality
fleshes out homepage and adds committee background toggle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="jumbotron">
   <h1 class="page-header">Ontario Model United Nations</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis enim ut massa faucibus ultrices. Nulla faucibus dignissim leo sit amet placerat. Suspendisse in risus massa.</p>
-  <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;">Learn more</a></p>
 </div>
 
   <div class="row">
@@ -20,9 +20,10 @@ layout: default
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis enim ut massa faucibus ultrices. Nulla faucibus dignissim leo sit amet placerat. Suspendisse in risus massa. In vitae felis vel risus porta sollicitudin. Nullam tincidunt eros pellentesque, auctor neque vel, iaculis dolor. Pellentesque non risus est. Donec nisl justo, sagittis ac efficitur at, dignissim sed quam. Nullam et velit erat. Aenean nunc massa, sagittis eu fringilla sed, rhoncus eu velit. Suspendisse iaculis faucibus magna vel efficitur. Nunc ac velit et neque consectetur malesuada. Praesent et sagittis metus. Vestibulum et arcu suscipit, pharetra lorem ut, tristique turpis. Suspendisse euismod, erat ut mollis tempus, velit nisi bibendum est, lacinia aliquam lorem erat nec tortor. Praesent tortor mauris, commodo nec placerat viverra, mollis ut turpis.
           </div>
            <div class="panel-footer">
-             <a class="btn btn-primary btn-xs" href="#" style="color:white;" role="button" >About</a>
-             <a class="btn btn-primary btn-xs" href="#" style="color:white;" role="button">FAQ</a>
-             <a class="btn btn-primary btn-xs" href="#" style="color:white;" role="button">Team</a>
+             <a class="btn btn-primary btn-xs" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;" role="button">About</a>
+             <a class="btn btn-primary btn-xs" href="{{ "/committees/" | prepend: site.baseurl }}" style="color:white;" role="button">Committees</a>
+             <a class="btn btn-primary btn-xs" href="{{ "/faq/" | prepend: site.baseurl }}" style="color:white;" role="button">FAQ</a>
+             <a class="btn btn-primary btn-xs" href="{{ "/team/" | prepend: site.baseurl }}" style="color:white;" role="button">Team</a>
            </div>
         </div>
       </div>
