touches things up for release

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 		    <div class="container">
 		        <h1 class="logo" style="font-size:84px;">OMUN 2017</h1>
 		        <div class="content">
-		            <h4 class="motto">The best student-run Model UN conference.</h4>
+		            <h4 class="motto">Ontario's Premier Model UN Conference.</h4>
 		            <div class="subscribe">
-									<h1 class="motto cursive" style="font-size:108px;" id="timeLeft"></h1>
+									<h1 class="info-text" style="font-size:48px;">April 22nd and 23rd at Upper Canada College</h1> 
+									<h1 class="motto cursive" id="timeLeft"></h1>
 	                <h5 class="info-text">More information coming soon.</h5>
 		            </div>
 		        </div>
@@ -74,7 +75,7 @@
 			 	}
 			 }
 
-			 var deadLine = "4/8/2017"; //Countdown date in MM/DD/YYYY format (no 0's required)
+			 var deadLine = "4/22/2017"; //Countdown date in MM/DD/YYYY format (no 0's required)
 			 window.setInterval(function(){
 			 $("#timeLeft").html(getTimeRemaining(deadLine));
 			 }, 1000);
