--- a/_committees/index.html
+++ b/_committees/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Committees
+type: info
 ---
 
 <div class="container">
@@ -14,7 +15,7 @@ title: Committees
       </tr>
     </thead>
     <tbody>
-      {% for committee in site.committees %}{% unless committee.title == 'Committees' %}
+      {% for committee in site.committees %}{% unless committee.type == 'info' %}
       <tr>
         <td><a href="{{ committee.url | prepend: site.baseurl }}">{{ committee.title }} </a></td>
         <td>{{ committee.type }}</td>
