--- a/index.html
+++ b/index.html
@@ -38,27 +38,6 @@
 		    </div>
 		  </div>
 		</nav>
-		<script type="text/javascript">
-			 function getTimeRemaining(endtime){
-			 	var t = Date.parse(endtime) - Date.parse(new Date());
-			 	var seconds = Math.floor( (t/1000) % 60 );
-			 	var minutes = Math.floor( (t/1000/60) % 60 );
-			 	var hours = Math.floor( (t/(1000*60*60)) % 24 );
-			 	var days = Math.floor( t/(1000*60*60*24) );
-
-			 	if (t > 0){
-			 		return days + " d " + hours + " h " + minutes + " m " + seconds + " s";
-			 	}
-			 	else {
-			 		return "Oops!";
-			 	}
-			 }
-
-			 var deadLine = "4/22/2017"; //Countdown date in MM/DD/YYYY format (no 0's required)
-			 window.setInterval(function(){
-			 $("#timeLeft").html(getTimeRemaining(deadLine));
-			 }, 1000);
-		 </script>
 		<div class="main" style="background-image: url('images/default.jpg')">
 		    <div class="cover black" data-color="black"></div>
 		    <div class="container">
@@ -66,19 +45,38 @@
 		        <div class="content">
 		            <h4 class="motto">Ontario's Premier Model UN Conference.</h4>
 		            <div class="subscribe">
-									<h1 class="info-text" style="font-size:48px;">April 22nd and 23rd at Upper Canada College</h1> 
+									<h1 class="info-text" style="font-size:48px;">April 22nd and 23rd at Upper Canada College</h1>
 									<h1 class="motto cursive" id="timeLeft"></h1>
 	                <h5 class="info-text">More information coming soon.</h5>
 		            </div>
 		        </div>
 		    </div>
 		    <div class="footer">
-		      <div class="container">
-             Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me">Matthew Wang</a>. <a href="https://github.com/malsf21/omun.ca"><span class="fa fa-github" style="color:white;"></span> here.</a>
-		      </div>
+         Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me">Matthew Wang</a> <a href="https://github.com/malsf21/omun.ca"> on <span class="fa fa-github" style="color:white;"></span></a>
 		    </div>
 		 </div>
 		 <script src="js/jquery.min.js" type="text/javascript"></script>
 		 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+		 <script type="text/javascript">
+			function getTimeRemaining(endtime){
+				var t = Date.parse(endtime) - Date.parse(new Date());
+				var seconds = Math.floor( (t/1000) % 60 );
+				var minutes = Math.floor( (t/1000/60) % 60 );
+				var hours = Math.floor( (t/(1000*60*60)) % 24 );
+				var days = Math.floor( t/(1000*60*60*24) );
+
+				if (t > 0){
+					return days + " d " + hours + " h " + minutes + " m " + seconds + " s";
+				}
+				else {
+					return "Oops!";
+				}
+			}
+
+			var deadLine = "4/22/2017"; //Countdown date in MM/DD/YYYY format (no 0's required)
+			window.setInterval(function(){
+			$("#timeLeft").html(getTimeRemaining(deadLine));
+			}, 1000);
+ 		 </script>
 	 </body>
 </html>
