puts docs as a site component, cleans up directory for it
moves docs/ to _docs/ collection and renders docs on site; cleans up
directory

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ layout: default
           </div>
            <div class="panel-footer">
              <a class="btn btn-primary btn-xs" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;" role="button">About</a>
+             <a class="btn btn-primary btn-xs" href="{{ "/news/" | prepend: site.baseurl }}" style="color:white;" role="button">News</a>
              <a class="btn btn-primary btn-xs" href="{{ "/committees/" | prepend: site.baseurl }}" style="color:white;" role="button">Committees</a>
              <a class="btn btn-primary btn-xs" href="{{ "/faq/" | prepend: site.baseurl }}" style="color:white;" role="button">FAQ</a>
              <a class="btn btn-primary btn-xs" href="{{ "/team/" | prepend: site.baseurl }}" style="color:white;" role="button">Team</a>
