--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
             </div>
           {% endfor %}
         </div>
-        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+        <p class="rss-subscribe">subscribe <a href="{{ "/news/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
       </div>
     </div>
   </div>
