--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
   <h1 class="page-header">Ontario Model United Nations</h1>
   <p class="lead">Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. </p>
   <p>
-  <b><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds</span></b> until OMUN 2017!
+  <b><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds</span></b> until OMUN II!
   </p>
   <p><a class="btn btn-primary btn-lg" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;">Learn more</a></p>
 </div>
