fills out four logos

--- a/index.html
+++ b/index.html
@@ -38,22 +38,23 @@ layout: default
         </div>
       </div>
       <div class="well">
+        <h4>Coming Soon: More Information</h4>
         <div class="row" style="text-align:center;">
           <div class="col-sm-3">
             <h2><span class="fa fa-user"></span></h2>
-            <h4>Boop.</h4>
+            <h4>Students</h4>
           </div>
           <div class="col-sm-3">
-            <h2><span class="fa fa-child"></span></h2>
-            <h4>Boop.</h4>
+            <h2><span class="fa fa-book"></span></h2>
+            <h4>Delegates</h4>
           </div>
           <div class="col-sm-3">
             <h2><span class="fa fa-gavel"></span></h2>
-            <h4>Boop.</h4>
+            <h4>Committees</h4>
           </div>
           <div class="col-sm-3">
             <h2><span class="fa fa-institution"></span></h2>
-            <h4>Boop.</h4>
+            <h4>Schools</h4>
           </div>
         </div>
       </div>
