adds static api endpoint for OMUN contact info

--- a/_reg/index.html
+++ b/_reg/index.html
@@ -4,5 +4,5 @@ title: Registration Coming Soon!
 ---
 <div class="container">
   <h1>Registration is coming soon!</h1>
-  <p class="lead">You can <a href="{{site.facebook}}">like us on Facebook</a>, <a href="{{site.twitter}}">follow us on Twitter</a>, or <a href="{{site.instagram}}">follow us on Instagram</a> to get updated on site updates, including registration, committee topics, and position papers.</p>
+  <p class="lead">You can <a href="{{site.data.contact.facebook}}">like us on Facebook</a>, <a href="{{site.data.contact.twitter}}">follow us on Twitter</a>, or <a href="{{site.data.contact.instagram}}">follow us on Instagram</a> to get updated on site updates, including registration, committee topics, and position papers.</p>
 </div>
