--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     <span class="fa fa-warning"></span> <strong>Hey there!</strong> Welcome to the OMUN II Website! We're still working on this website, including more committee descriptions, FAQs, and registration; you just get a sneak peek! You're free to browse in the meantime, just remember to check back more for more updates!
   </div>
   <div class="jumbotron">
-    <h1 class="page-header">Ontario MUN II <small>April 22nd - April 23rd</h1>
+    <h1 class="page-header">Ontario Model United Nations II <small>April 22nd/23rd</h1>
     <p class="lead">Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. </p>
     <p>
     <b><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds</span></b> until OMUN II!
