--- a/_reg/login.html
+++ b/_reg/login.html
@@ -2,6 +2,7 @@
 layout: default
 title: Login
 ---
+<div class="container">
 <h1 class="page-header">Login</h1>
 <h3>Don't have an account? <b><a href="register.html">Register</a></b>.</h3>
 <form action="login.php" method="post">
@@ -22,3 +23,4 @@ title: Login
     </div>
   </div>
 </form>
+</div>
