completes first draft of reg system

--- a/_reg/index.html
+++ b/_reg/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Registration Coming Soon!
 ---
 <div class="container">
-  <h1>Registration is coming soon!</h1>
+  <h1>Registration is here!</h1>
+  <h2>Register <a href="register.html">here.</a></h2>
+  <h3>For now, a school administrator can register their school, and specify how many delegates are attending. More information, including committee assignments, is coming soon!</h3>
   <p class="lead">You can <a href="{{site.data.contact.facebook}}">like us on Facebook</a>, <a href="{{site.data.contact.twitter}}">follow us on Twitter</a>, or <a href="{{site.data.contact.instagram}}">follow us on Instagram</a> to get updated on site updates, including registration, committee topics, and position papers.</p>
 </div>
