--- a/_reg/register.html
+++ b/_reg/register.html
@@ -4,7 +4,7 @@ title: Regsiter for OMUN II
 ---
 <div class="container">
 	<h1 class="page-header">Register</h1>
-	<p>Already have an account? <a href="login.php">Login</a>.</p>
+	<p>Already have an account? <a href="login.html">Login</a>.</p>
 	<form action="register.php" method="post">
 	  <div class = "row">
 	    <div class = "col-sm-3">
