tries out a new method of homepage display

--- a/_reg/register.html
+++ b/_reg/register.html
@@ -3,6 +3,11 @@ layout: default
 title: Regsiter for OMUN II
 ---
 <div class="container">
+  <h1>Registration is coming soon!</h1>
+  <p class="lead">You can <a href="https://www.facebook.com/OntarioModelUnitedNations">like us on Facebook</a>, <a href="https://twitter.com/OntarioMUN">follow us on Twitter</a>, or <a href="https://www.instagram.com/ontariomodelun/">follow us on Instagram</a> to get updated on site updates, including registration, committee topics, and position papers.</p>
+</div>
+<!--
+<div class="container">
 	<h1 class="page-header">Register</h1>
 	<p>Already have an account? <a href="login.html">Login</a>.</p>
 	<form action="register.php" method="post">
@@ -62,3 +67,4 @@ title: Regsiter for OMUN II
 	  </div>
 	</form>
 </div>
+-->
