adds header to committees page

--- a/_committees/index.html
+++ b/_committees/index.html
@@ -5,6 +5,7 @@ type: info
 ---
 
 <div class="container">
+  <h1 class="page-header">Committees</h1>
   <p class="lead">Committees are the core of Model UN: each committee represents a UN body or another organisation, where each delegate will participate in. Each committee will have a set of topics or goals, that as a group, the committee wants to work towards reaching. </p>
   <p class="lead">Here, you can see all the committees that will be available at OMUN II! You can click on each invidivual committee to find out more about it, including a brief description, topics, and background guide/position paper information.</p>
   <table class="table" data-toggle="table">
