adds a few more pictures

--- a/_committees/index.html
+++ b/_committees/index.html
@@ -5,7 +5,17 @@ type: info
 ---
 
 <div class="container">
-  <h1 class="page-header">Committees</h1>
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-sm-4">
+        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_friends.jpg" />
+      </div>
+      <div class="col-sm-8">
+        <h1>OMUN Committees</h1>
+        <h2>A Diverse Set of Topics</h2>
+      </div>
+    </div>
+  </div>
   <p class="lead">Committees are the core of Model UN: each committee represents a UN body or another organisation, where each delegate will participate in. Each committee will have a set of topics or goals, that as a group, the committee wants to work towards reaching. </p>
   <p class="lead">Here, you can see all the committees that will be available at OMUN II! You can click on each invidivual committee to find out more about it, including a brief description, topics, and background guide/position paper information.</p>
   <table class="table" data-toggle="table">
