changes frontpage layout

--- a/index.html
+++ b/index.html
@@ -9,20 +9,8 @@ layout: default
   }, 1000);
 </script>
 <img class="img-rounded" src="{{site.baseurl}}/img/promo-1.png" style="margin-top:-25px; display:block;max-height:100%;max-width:auto;"/>
-
-  <div class="jumbotron">
-    <div class="container">
-      
-    <h1 class="page-header">Ontario Model United Nations II</h1>
-    <h1><small>April 22nd/23rd</small></h1>
-    <p class="lead">Ontario Model United Nations is a student-run Model United Nations simulation held at Upper Canada College. </p>
-    <p>
-    <b><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds</span></b> until OMUN II!
-    </p>
-    <p><a class="btn btn-primary btn-lg" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;">Learn more</a></p>
-  </div>
-  </div>
 <div class="container">
+  <h1 class="text-center"><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds</span> until OMUN II!</h1>
   <div class="row">
     <div class="col-sm-6">
       <div class="panel panel-primary">
