--- a/_committees/index.html
+++ b/_committees/index.html
@@ -18,6 +18,9 @@ type: info
   </div>
   <p class="lead">Committees are the core of Model UN: each committee represents a UN body or another organisation, where each delegate will participate in. Each committee will have a set of topics or goals, that as a group, the committee wants to work towards reaching. </p>
   <p class="lead">Here, you can see all the committees that will be available at OMUN II! You can click on each invidivual committee to find out more about it, including a brief description, topics, and background guide/position paper information.</p>
+  <p>
+    Looking for a country matrix? View it <a href="{{site.baseurl}}/files/country_matrix.pdf">here.</a>
+  </p>
   <table class="table" data-toggle="table">
     <thead>
       <tr>
