pushes small tidbit on reg centre

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ layout: default
       </div>
       <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="panel-title">Registration is coming soon!</h3>
+          <h3 class="panel-title">Registration is here!</h3>
         </div>
         <div class="panel-body">
-          <p class="lead">You can <a href="https://www.facebook.com/OntarioModelUnitedNations">like us on Facebook</a>, <a href="https://twitter.com/OntarioMUN">follow us on Twitter</a>, or <a href="https://www.instagram.com/ontariomodelun/">follow us on Instagram</a> to get updated on site updates, including registration, committee topics, and position papers.</p>
+          <p class="lead">Visit <a href="{{site.baseurl}}/reg/">our reg center</a> to start registering for OMUN II!</p>
         </div>
       </div>
     </div>
