--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ permalink: /news/
   <div class="jumbotron">
     <div class="row">
       <div class="col-sm-4">
-        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/will_and_alex.jpg" />
+        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/will_and_alex.jpg" alt="Previous OMUN Staff hard at work!"/>
       </div>
       <div class="col-sm-8">
         <h1>News</h1>
