--- a/_committees/index.html
+++ b/_committees/index.html
@@ -8,7 +8,7 @@ type: info
   <div class="jumbotron">
     <div class="row">
       <div class="col-sm-4">
-        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_friends.jpg" />
+        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_friends.jpg" alt="OMUN delegates presenting a resolution in committee."/>
       </div>
       <div class="col-sm-8">
         <h1>OMUN Committees</h1>
