--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@ permalink: /about/
 <div class="container">
   <div class="jumbotron">
     <div class="row">
-      <div class="col-sm-4">
-        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_girl.jpg" />
+      <div class="col-md-4">
+        <img class="img-responsive img-rounded" src="{{site.baseurl}}/img/david_and_girl.jpg" alt="Delegates at OMUN debating contentious topics and issues."/>
       </div>
-      <div class="col-sm-8">
+      <div class="col-md-8">
         <h1>About OMUN</h1>
         <h2>Ontario's Premier MUN Conference</h2>
       </div>
