removes bulletin behaviour from index, shouldn't be needed anymore

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
       </div>
     </div>
     <div class="col-md-6">
-      <div class="bulletin">
+      <div>
         {% for post in site.posts limit: 1%}
           <div class="panel panel-info">
             <div class="panel-heading">
