adds committee emails, information about position paper submission!

--- a/index.html
+++ b/index.html
@@ -39,20 +39,23 @@ layout: default
           <b>Ontario Model United Nations</b> is a 2 day Model United Nations Conference held at Upper Canada College in Toronto. Ontario's premier MUN conference, OMUN offers a wide range of small to medium sized committees where all delegates, experienced or novice, can try their hand at public speaking, diplomacy, and negotiation. Delegates will assume the role of a nation or figure at various international bodies and domestic organizations, and will use their critical thinking and problem solving skills to find resolutions to some of the most pressing issues facing the world today. OMUN aims to give delegates a valuable window into the world of international relations, and foster discussion and learning on a variety of topics.
         </div>
          <div class="panel-footer">
-           <a class="btn btn-primary btn-xs" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;" role="button">About</a>
-           <a class="btn btn-primary btn-xs" href="{{ "/news/" | prepend: site.baseurl }}" style="color:white;" role="button">News</a>
-           <a class="btn btn-primary btn-xs" href="{{ "/committees/" | prepend: site.baseurl }}" style="color:white;" role="button">Committees</a>
-           <a class="btn btn-primary btn-xs" href="{{ "/faq/" | prepend: site.baseurl }}" style="color:white;" role="button">FAQ</a>
-           <a class="btn btn-primary btn-xs" href="{{ "/team/" | prepend: site.baseurl }}" style="color:white;" role="button">Team</a>
-           <a class="btn btn-primary btn-xs" href="{{ "/files/advisor_package.pdf" | prepend: site.baseurl }}" style="color:white;" role="button">Advisor Package</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/about/" | prepend: site.baseurl }}" style="color:white;" role="button">About</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/news/" | prepend: site.baseurl }}" style="color:white;" role="button">News</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/committees/" | prepend: site.baseurl }}" style="color:white;" role="button">Committees</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/faq/" | prepend: site.baseurl }}" style="color:white;" role="button">FAQ</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/team/" | prepend: site.baseurl }}" style="color:white;" role="button">Team</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/delegate-center/" | prepend: site.baseurl }}" style="color:white;" role="button">Delegate Center</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/files/advisor_package.pdf" | prepend: site.baseurl }}" style="color:white;" role="button">Advisor Package</a>
          </div>
       </div>
       <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="panel-title">Registration is here!</h3>
+          <h3 class="panel-title">Background Guides are up!</h3>
         </div>
         <div class="panel-body">
-          <p class="lead">Visit <a href="{{site.baseurl}}/reg/" data-proofer-ignore>our reg center</a> to start registering for OMUN II!</p>
+          <p class="lead">
+            Visit our <a href="{{site.baseurl}}/delegate-center/">Delegate Center</a> to get started on position papers!
+          </p>
         </div>
       </div>
     </div>
