--- a/delegate-center.html
+++ b/delegate-center.html
@@ -19,5 +19,11 @@ permalink: /delegate-center/
 </p>
 
 <p>
-  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date has been extended and is now <b>April 16, 2017</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. Position papers should be uploaded online, further details on this will released closer to the conference so stay tuned. In the meantime, get researching and writing. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate centre or feel free to contact us at omun@ucc.on.ca.
+  In regards to the length and format of position papers at OMUN, all position papers should be around one page in length per topic, single spaced and 11 or 12 point font. Any citations included in a position paper should be in a <a href="http://www.chicagomanualofstyle.org/tools_citationguide.html">Chicago-style bibliography</a>. The due date has been extended and is now <b>April 16, 2017</b>. Be sure to include your name, your school’s name, as well the country that you are representing in a header on your position paper. If you are having any difficulties with writing a position paper or doing research, please refer to the delegate center or feel free to contact us at omun@ucc.on.ca.
+</p>
+
+<h2>Position Paper Submission</h2>
+
+<p>
+  Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>April 16, 2017</b>.
 </p>
