pushes new schedule

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
            <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/news/" | prepend: site.baseurl }}" style="color:white;" role="button">News</a>
            <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/committees/" | prepend: site.baseurl }}" style="color:white;" role="button">Committees</a>
            <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/faq/" | prepend: site.baseurl }}" style="color:white;" role="button">FAQ</a>
+           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/files/schedule.pdf" | prepend: site.baseurl }}" style="color:white;" role="button">Schedule</a>
            <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/team/" | prepend: site.baseurl }}" style="color:white;" role="button">Team</a>
            <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/delegate-center/" | prepend: site.baseurl }}" style="color:white;" role="button">Delegate Center</a>
-           <a class="btn btn-primary btn-xs btn-force-white" href="{{ "/files/advisor_package.pdf" | prepend: site.baseurl }}" style="color:white;" role="button">Advisor Package</a>
          </div>
       </div>
       <div class="panel panel-primary">
