adds conference policies

--- a/delegate-center.html
+++ b/delegate-center.html
@@ -12,6 +12,12 @@ permalink: /delegate-center/
   The Delegate Center is an area where delegates can get help with any topics dealing with OMUN, and learn more about MUN in general. It will cover topics such as position papers, committee procedure, resolution writing, and more!
 </p>
 
+<h2>Conference Policy</h2>
+
+<p>
+  If you're interested in our conference policies, you can <a href="{{site.baseurl}}/files/conference_policies.pdf">download this PDF</a> or find them in our delegate package on the day-of.
+</p>
+
 <h2>Position Paper Guidelines</h2>
 
 <p>
