--- a/index.html
+++ b/index.html
@@ -5,88 +5,58 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-    <title>Coming Soon | OMUN 2017</title>
-		<link rel="icon" href="favicon.png"></link>
-    <link href="css/bootstrap.css" rel="stylesheet" />
-		<link href="css/coming-sssoon.css" rel="stylesheet" />
+    <title>OMUN III | Coming Soon</title>
+		<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+		<link href="css/liteweight-omun.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">
-		  <div class="container">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-container">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		    </div>
-		    <div class="collapse navbar-collapse" id="navbar-collapse-container">
-		      <ul class="nav navbar-nav navbar-right">
-		            <li>
-	                <a href="https://www.facebook.com/OntarioModelUnitedNations"><span class="fa fa-facebook-square"></span> Share</a>
-		            </li>
-		             <li>
-		              <a href="https://twitter.com/OntarioMUN"><span class="fa fa-twitter"></span> Tweet</a>
-		            </li>
-		             <li>
-		              <a href="mailto:omun@ucc.on.ca"><span class="fa fa-envelope-o"></span> Email</a>
-		            </li>
-		       </ul>
-		    </div>
-		  </div>
-		</nav>
-		<div class="main" style="background-image: url('images/default.jpg')">
-		    <div class="cover black" data-color="black"></div>
-		    <div class="container">
-		        <h1 class="logo" style="font-size:84px;">OMUN 2017</h1>
-		        <div class="content">
-		            <h4 class="motto">Ontario's Premier Model UN Conference.</h4>
-		            <div class="subscribe">
-									<h1 class="info-text" style="font-size:48px;">April 22nd and 23rd at Upper Canada College</h1>
-									<h1 class="motto cursive" id="timeLeft"></h1>
-	                <h5 class="info-text">More information coming soon.</h5>
-		            </div>
-		        </div>
-		    </div>
-		    <div class="footer">
-         Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me">Matthew Wang</a> <a href="https://github.com/malsf21/omun.ca"> on <span class="fa fa-github" style="color:white;"></span></a>
-		    </div>
+		 <div class="text-center">
+			 <h1 class="cover-text">OMUN III</h1>
+			 <h2>Ontario's Premier Model UN Conference</h2>
+			 <a class="button button-liteweight-secondary" href="https://omun.ca">OMUN II Website</a>
+			 <div class="more-info">More information coming soon.</div>
 		 </div>
-		 <script src="js/jquery.min.js" type="text/javascript"></script>
-		 <script src="js/bootstrap.min.js" type="text/javascript"></script>
-		 <script type="text/javascript">
-			function getTimeRemaining(endtime){
-				var t = Date.parse(endtime) - Date.parse(new Date());
-				var seconds = Math.floor( (t/1000) % 60 );
-				var minutes = Math.floor( (t/1000/60) % 60 );
-				var hours = Math.floor( (t/(1000*60*60)) % 24 );
-				var days = Math.floor( t/(1000*60*60*24) );
+		<div class="footer text-center">
+			<div class="icons">
+				<a href="https://www.facebook.com/OntarioModelUnitedNations"><span class="fa fa-facebook-square" style="color:white;"></span></a> <a href="https://twitter.com/OntarioMUN"><span class="fa fa-twitter" style="color:white;"></span></a> <a href="mailto:omun@ucc.on.ca"><span class="fa fa-envelope-o" style="color:white;"></span></a>
+			</div>
+			Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me">Matthew Wang</a> on <a href="https://github.com/malsf21/omun.ca"><span class="fa fa-github" style="color:white;"></span></a>
+		</div>
+	</body>
+	<script type="text/javascript">
+		/*
+		function getTimeRemaining(endtime){
+		var t = Date.parse(endtime) - Date.parse(new Date());
+		var seconds = Math.floor( (t/1000) % 60 );
+		var minutes = Math.floor( (t/1000/60) % 60 );
+		var hours = Math.floor( (t/(1000*60*60)) % 24 );
+		var days = Math.floor( t/(1000*60*60*24) );
 
-				if (t > 0){
-					return days + " d " + hours + " h " + minutes + " m " + seconds + " s";
-				}
-				else {
-					return "Oops!";
-				}
-			}
+		if (t > 0){
+			return days + " d " + hours + " h " + minutes + " m " + seconds + " s";
+		}
+		else {
+			return "Oops!";
+		}
+		}
 
-			var deadLine = "4/22/2017"; //Countdown date in MM/DD/YYYY format (no 0's required)
-			window.setInterval(function(){
-			$("#timeLeft").html(getTimeRemaining(deadLine));
-			}, 1000);
- 		 </script>
-		 <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		var deadLine = "4/22/2018"; //Countdown date in MM/DD/YYYY format (no 0's required)
+		window.setInterval(function(){
+		document.getElementById("timer").innerHTML = getTimeRemaining(deadLine);
+		}, 1000);
+		*/
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-79245217-1', 'auto');
-		  ga('send', 'pageview');
+		ga('create', 'UA-79245217-1', 'auto');
+		ga('send', 'pageview');
 
-		</script>
-	 </body>
+	</script>
 </html>
