adds tentative subdomain

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		 <div class="text-center">
 			 <h1 class="cover-text">OMUN III</h1>
 			 <h2>Ontario's Premier Model UN Conference</h2>
-			 <a class="button button-liteweight-secondary" href="https://omun.ca">OMUN II Website</a>
+			 <a class="button button-liteweight-secondary" href="https://2017.omun.ca">OMUN II Website</a>
 			 <div class="more-info">More information coming soon.</div>
 		 </div>
 		<div class="footer text-center">
