--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="icons">
 				<a href="https://www.facebook.com/OntarioModelUnitedNations"><span class="fa fa-facebook-square" style="color:white;"></span></a> <a href="https://twitter.com/OntarioMUN"><span class="fa fa-twitter" style="color:white;"></span></a> <a href="mailto:omun@ucc.on.ca"><span class="fa fa-envelope-o" style="color:white;"></span></a>
 			</div>
-			Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me">Matthew Wang</a> on <a href="https://github.com/malsf21/omun.ca"><span class="fa fa-github" style="color:white;"></span></a>
+			Made with <span class="fa fa-heart" style="color:red;"></span> by <a href="http://matthewwang.me" style="color:white; text-decoration:underline;">Matthew Wang</a> on <a href="https://github.com/malsf21/omun.ca"><span class="fa fa-github" style="color:white;"></span></a>
 		</div>
 	</body>
 	<script type="text/javascript">
