--- a/schedule.html
+++ b/schedule.html
@@ -2,11 +2,13 @@
 layout: page
 title: Schedule
 permalink: /schedule/
+published: false
 ---
-
+<!--
 <div class="alert alert-success" role="alert">
   Want a PDF copy? View and download one <a href="{{site.baseurl}}/files/schedule.pdf">here.</a>
 </div>
+-->
 <h2>Saturday April 22nd, 2017</h2>
 <ul class="list-schedule">
   <li>
