minor image update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     $("#timeLeft").html(getTimeRemaining(deadline));
   }, 1000);
 </script>
-<img class="full-cover" src="{{site.baseurl}}/img/promo-1.png" alt="An image of the Upper Canada College Campus, the location where OMUN is held."/>
+<img class="full-cover" src="{{site.baseurl}}/img/omun-pan.png" alt="An image of the Upper Canada College Campus, the location where OMUN is held."/>
 <div class="container">
   <div class="countdown">
     <h2><span id="timeLeft">000 Days, 00 Hours, 00 Minutes, and 00 Seconds until OMUN III!</span></h2>
