updates about and del-center

--- a/about.html
+++ b/about.html
@@ -35,7 +35,11 @@ permalink: /about/
     OMUN aims to bring forward unparalleled debate and unique solutions. Its delegates will leave the conference with new knowledge, friends, and memories. With the best committees, staff, and delegates in Ontario, we hope to provide the best Model United Nations experience possible.
   </p>
 
-  <i>This year is the second session of OMUN (OMUN II). Last year was the first session of OMUN I; you can read a recap below.</i>
+  <h3>About OMUN II (2017)</h3>
+
+  <p>
+    Building on our success with OMUN I, OMUN II has gone a long way in solidifying OMUN as Ontario’s premier Model UN Conference. With over 300 delegates from Ontario and beyond debating and engaging with issues ranging from outer space security to WikiLeaks in a number of unique committees. Congratulations, once again, to Oakville Trafalgar School for winning best large delegation and Monarch Park for winning best small delegation. We would like to thanks all delegates for their amazing contributions in committee and their commitment to finding solutions to some of the most pressing issues in the world today. We look forward to seeing all of you at OMUN III!
+  </p>
 
   <h3>About OMUN I (2016)</h3>
 
