--- a/delegate-center.html
+++ b/delegate-center.html
@@ -4,6 +4,8 @@ title: Delegate Center
 permalink: /delegate-center/
 ---
 
+<h2>Coming Soon!</h2>
+{% comment %}
 <p>
   The Delegate Center is an area where delegates can get help with any topics dealing with OMUN, and learn more about MUN in general. It will cover topics such as position papers, committee procedure, resolution writing, and more!
 </p>
@@ -29,3 +31,5 @@ permalink: /delegate-center/
 <p>
   Position Papers can be submitted by emailing your committee email and attaching a PDF or Word document. Committee emails can be found at each <a href="{{site.baseurl}}/committees">committee page</a>. Simply attach the document and make the subject <code>assignment_committee_school</code> (e.g.<code>USA_SecurityCouncilAdvanced_UpperCanadaCollege</code>). As a reminder, position papers must be submitted by <b>April 16, 2017</b>.
 </p>
+
+{% endcomment %}
